Add Umami script and GitHub mention to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script defer src="https://umami.c3n.ro/script.js" data-website-id="37224105-55ef-416e-b134-1a234c94973a"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MPV Config Studio</title>
@@ -157,7 +158,10 @@
       <h1>Assemble a beautiful, sensible <span style="color: var(--accent-2);">mpv.conf</span></h1>
       <div class="subtitle">Start with sane defaults, tweak details, and export a ready-to-drop config.</div>
     </div>
-    <div class="badge">Offline-first · No build tools</div>
+    <div class="inline">
+      <a href="https://github.com/CodinMoldovanu/mpvconf" target="_blank" rel="noreferrer"><button type="button" class="ghost">Improve this on GitHub!</button></a>
+      <div class="badge">Offline-first · No build tools</div>
+    </div>
   </header>
 
   <main>
